--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
+    "emoji-mart": "^5.6.0",
     "notistack": "^3.0.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
