--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
   },
