--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
     "emoji-mart": "^5.6.0",
+    "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
