--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "backend": "file:..",
     "bootstrap": "^5.3.3",
     "emoji-mart": "^5.6.0",
     "jwt-decode": "^4.0.0",
